# UWblNSKPRIME-Slay-the-Spire-mod-manager

./: Cargo.toml  LICENSE  Plan.md  README.md  architecture_spec.md
sts_modloader/: Cargo.toml
sts_modloader/src/: main.rs
sts_modloader_core/: Cargo.toml
sts_modloader_core/src/: config.rs  lib.rs
sts_modloader_fs/: Cargo.toml
sts_modloader_fs/src/: lib.rs  runner.rs  scanner.rs  steam.rs
sts_modloader_parser/: Cargo.toml
sts_modloader_parser/src/: lib.rs  metadata.rs
sts_modloader_profile/: Cargo.toml
sts_modloader_profile/src/: lib.rs  manager.rs
sts_modloader_ui/: Cargo.toml
sts_modloader_ui/src/: app.rs  lib.rs  styles.rs
sts_modloader_ui/src/components/: bottom_bar.rs  control_block.rs  left_panel.rs  mod.rs  right_panel.rs  setup_screen.rs
