[package]
name = "sts_modloader"
version = "0.2.0"
edition = "2021"

[dependencies]
sts_modloader_ui = { path = "../sts_modloader_ui" }
sts_modloader_core = { path = "../sts_modloader_core" }
tokio = { version = "1.35", features = ["rt-multi-thread", "macros"] }
iced = { version = "0.12", features = ["tokio", "image"] }
