[package]
name = "sts_modloader_fs"
version = "0.2.0"
edition = "2021"

[dependencies]
sts_modloader_core = { path = "../sts_modloader_core" }
sts_modloader_parser = { path = "../sts_modloader_parser" }
walkdir = "2.4"
tokio = { version = "1.35", features = ["process", "fs", "rt"] }
rfd = "0.12"
thiserror = "1.0"
dirs = "5.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.50"

[dev-dependencies]
zip = { version = "0.6", default-features = false, features = ["deflate"] }
