[package]
name = "sts_modloader_parser"
version = "0.2.0"
edition = "2021"

[dependencies]
sts_modloader_core = { path = "../sts_modloader_core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
thiserror = "1.0"
